// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields checkbox field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <span
        className="fui-Checkbox r10zo65y ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          checked={false}
          className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="checkbox"
        />
        <div
          aria-hidden={true}
          className="fui-Checkbox__indicator rl7ci6d"
        />
        <label
          className="fui-Label fui-Checkbox__label ___noxlvg0_1xjoun4 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
          htmlFor="root"
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkbox field with label 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <span
        className="fui-Checkbox r10zo65y ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          checked={false}
          className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="checkbox"
        />
        <div
          aria-hidden={true}
          className="fui-Checkbox__indicator rl7ci6d"
        />
        <label
          className="fui-Label fui-Checkbox__label ___noxlvg0_1xjoun4 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
          htmlFor="root"
        >
          test
        </label>
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkboxes field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___1yevxz2_yljzsa0 fk6fouc f19n0e5 fkhj508 f1i3iumi"
        htmlFor="root"
      >
        An enum list rendered as checkboxes
      </label>
      <div
        className="fui-Flex ___1ccp5kb_1s932w9 f22iagw f1vx9l62"
      >
        <span
          className="fui-Checkbox r10zo65y ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
            disabled={false}
            id="root-0"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <div
            aria-hidden={true}
            className="fui-Checkbox__indicator rl7ci6d"
          />
          <label
            className="fui-Label fui-Checkbox__label ___noxlvg0_1xjoun4 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-0"
          >
            foo
          </label>
        </span>
        <span
          className="fui-Checkbox r10zo65y ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
            disabled={false}
            id="root-1"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <div
            aria-hidden={true}
            className="fui-Checkbox__indicator rl7ci6d"
          />
          <label
            className="fui-Label fui-Checkbox__label ___noxlvg0_1xjoun4 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-1"
          >
            bar
          </label>
        </span>
        <span
          className="fui-Checkbox r10zo65y ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
            disabled={false}
            id="root-2"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <div
            aria-hidden={true}
            className="fui-Checkbox__indicator rl7ci6d"
          />
          <label
            className="fui-Label fui-Checkbox__label ___noxlvg0_1xjoun4 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-2"
          >
            fuzz
          </label>
        </span>
        <span
          className="fui-Checkbox r10zo65y ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
            disabled={false}
            id="root-3"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <div
            aria-hidden={true}
            className="fui-Checkbox__indicator rl7ci6d"
          />
          <label
            className="fui-Label fui-Checkbox__label ___noxlvg0_1xjoun4 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-3"
          >
            qux
          </label>
        </span>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields field with description 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="fui-Flex ___2axmsj0_qpg1ts0 f22iagw f1vx9l62 fly5x3f f1l02sjl f16r77es"
      >
        <div
          className="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
          style={
            {
              "marginBottom": "10px",
            }
          }
        >
          <div
            className="form-group field field-string"
          >
            <div
              className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
            >
              <label
                className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                htmlFor="root_my-field"
              >
                my-field
              </label>
              <span
                className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
              >
                <input
                  aria-describedby="root_my-field__error root_my-field__description root_my-field__help"
                  autoFocus={false}
                  className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
                  disabled={false}
                  id="root_my-field"
                  name="root_my-field"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  required={false}
                  type="text"
                  value=""
                />
              </span>
              <p
                className="fui-Text ___149as9o_18y0df8 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln ftgm304 f6juhto f1mtd64y f1y7q3j9 f2jf649"
                style={
                  {
                    "marginBottom": 0,
                    "marginTop": 0,
                  }
                }
              >
                <span
                  className="fui-Text ___1e3hxnw_shn9n80 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln ftgm304 f6juhto f1mtd64y f1y7q3j9 f2jf649 frnwi6n f18zxyen"
                  id="root_my-field__description"
                >
                  some description
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields field with description in uiSchema 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="fui-Flex ___2axmsj0_qpg1ts0 f22iagw f1vx9l62 fly5x3f f1l02sjl f16r77es"
      >
        <div
          className="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
          style={
            {
              "marginBottom": "10px",
            }
          }
        >
          <div
            className="form-group field field-string"
          >
            <div
              className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
            >
              <label
                className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                htmlFor="root_my-field"
              >
                my-field
              </label>
              <span
                className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
              >
                <input
                  aria-describedby="root_my-field__error root_my-field__description root_my-field__help"
                  autoFocus={false}
                  className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
                  disabled={false}
                  id="root_my-field"
                  name="root_my-field"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  required={false}
                  type="text"
                  value=""
                />
              </span>
              <p
                className="fui-Text ___149as9o_18y0df8 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln ftgm304 f6juhto f1mtd64y f1y7q3j9 f2jf649"
                style={
                  {
                    "marginBottom": 0,
                    "marginTop": 0,
                  }
                }
              >
                <span
                  className="fui-Text ___1e3hxnw_shn9n80 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln ftgm304 f6juhto f1mtd64y f1y7q3j9 f2jf649 frnwi6n f18zxyen"
                  id="root_my-field__description"
                >
                  some other description
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format color 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="color"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format date 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="date"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format datetime 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="datetime-local"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format time 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="time"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields help and error display 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="fui-Card ___tvq26a0_10panks f1p9o1ba f1sil6mw fifeqxg f899z7z f4h3tyx f18ur2pz f1lplnzb f10m5gbb fhftqfp f1k04kkk fxsr4vj fcvsdzp f22iagw f10pi13n f1ewtqcl f19n0e5 f1mdlcz9 frwkxtg f1n6gb5g f15yvnhg fo72kxq f13zj6fq f1nwj1ja f8rth92 flthirb f1lh990p ftkbnf5 f6czdpx f13hvwk3 f1i1u9k0 f1en4csx f1qnomq5 f2fl922 f1anhtl f1n2zcl3 f16v3d5c f1vx9l62 fobhde4 fx5r7kn f19chtn8 fuvs6re fy4glsf frsmuga fuldkky f1eon7jj f1couhl3 f1e4n9qa fmr10b5 f7ew8k6 f1prrymk ftqa4ok f2hkw1w f8hki3x f1d2448m f1bjia2o ffh67wi f226i61 f13kzufm flujwa2 fsx75g8 f15bsgw9 f14e48fq f18yb2kv fd6o370 fh1cnn4 fy7oxxb fpukqih f184ne2d f99gebs f13b0oaq f1jvq617 f8t2bz6 f11unbnk fbd201q f12nqxso f1uguk4w f1dvezut fd0oaoj fjvm52t f1cwg4i8 f15fr7a0 fwsq40z f34ld9f fy0y4wt fbxl46w"
    role="group"
  >
    <h6
      className="fui-Text ___1j4m6ob_ffsath0 fk6fouc fod5ikn faaz57k figsok6 fpgzoln f1w7gpdv f6juhto f1mtd64y f1y7q3j9 f2jf649 f1hu3pq6 f19f4twv"
    >
      Errors
    </h6>
    <ul>
      <li>
        . an error
      </li>
    </ul>
  </div>
  <div
    className="form-group field field-string field-error has-error has-danger"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___3k9dro0_uo2dlw0 fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm fs4k3qj fcee079 f1fgmyf4 fmyw78r"
      >
        <input
          aria-describedby="root__error root__description root__help"
          aria-invalid={true}
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </span>
      <ul
        className="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
      >
        <li
          className="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
        >
          <small
            className="___9491ub0_0000000 f1hcrxcs"
            id="root__error"
          >
            an error
          </small>
        </li>
      </ul>
      <span
        className="fui-Caption1 fui-Text ___grx76c0_k6mk1f0 fk6fouc fy9rknc fwrc4pm figsok6 fpgzoln f1w7gpdv f6juhto f1mtd64y f1y7q3j9 f2jf649"
        id="root__help"
      >
        help me!
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields hidden field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="fui-Flex ___2axmsj0_qpg1ts0 f22iagw f1vx9l62 fly5x3f f1l02sjl f16r77es"
      >
        <div
          style={
            {
              "display": "none",
            }
          }
        >
          <input
            id="root_my-field"
            name="root_my-field"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields hidden label 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-null"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    />
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields number field 0 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          step="any"
          type="number"
          value={0}
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          step="any"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields password field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="password"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields radio field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___1yevxz2_yljzsa0 fk6fouc f19n0e5 fkhj508 f1i3iumi"
        htmlFor="root"
      />
      <div
        aria-describedby="root__error root__description root__help"
        className="fui-RadioGroup ___1tjgnp0_1mgmpxf f22iagw f6jr5hl f1vx9l62"
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        role="radiogroup"
      >
        <span
          className="fui-Radio rm0dkue"
        >
          <input
            aria-describedby="root__error root__description root__help"
            className="fui-Radio__input rg1upok ___183j3wl_1dim0pv f9ma1gx"
            disabled={false}
            id="root-0"
            name="root"
            onChange={[Function]}
            type="radio"
            value="0"
          />
          <div
            aria-hidden={true}
            className="fui-Radio__indicator rwtekvw"
          />
          <label
            className="fui-Label fui-Radio__label ___1o91fp6_qunpvi0 fk6fouc f19n0e5 fkhj508 f1i3iumi f7nlbp4 f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-0"
          >
            Yes
          </label>
        </span>
        <span
          className="fui-Radio rm0dkue"
        >
          <input
            aria-describedby="root__error root__description root__help"
            className="fui-Radio__input rg1upok ___183j3wl_1dim0pv f9ma1gx"
            disabled={false}
            id="root-1"
            name="root"
            onChange={[Function]}
            type="radio"
            value="1"
          />
          <div
            aria-hidden={true}
            className="fui-Radio__indicator rwtekvw"
          />
          <label
            className="fui-Label fui-Radio__label ___1o91fp6_qunpvi0 fk6fouc f19n0e5 fkhj508 f1i3iumi f7nlbp4 f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-1"
          >
            No
          </label>
        </span>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields schema examples 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help root__examples"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          list="root__examples"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </span>
      <datalist
        id="root__examples"
      >
        <option
          value="Firefox"
        />
        <option
          value="Chrome"
        />
        <option
          value="Opera"
        />
        <option
          value="Vivaldi"
        />
        <option
          value="Safari"
        />
      </datalist>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
      >
        <label
          className="fui-Label fui-Field__label ___1r7nw7g_1a9hq9n fk6fouc f19n0e5 fkhj508 f1i3iumi fclwglc fywfov9 fyacil5"
          htmlFor="field-rh__control"
          id="field-rh__label"
        />
        <div
          className="fui-Dropdown form-control ___1t74ezd_q04bao0 f1aa9q02 f16jpd5f f1jar5jt fyu767a f1ewtqcl ftuwxu6 f1exfvgq f10pi13n f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 f132nw8t f1htdosj fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh fvcxoqz f1ub3y4t flmw63s f1m52nbi fvs00aa f1assf6x fqhmt4z f4ruux4"
        >
          <button
            aria-describedby="root__error root__description root__help"
            aria-expanded={false}
            aria-labelledby="field-rh__label"
            autoFocus={false}
            className="fui-Dropdown__button ___10ah4o2_6igl400 f122n59 f1c21dwh fre7gi1 f1358rze fqdk4by f1rvrf73 f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f1sbtcvk f11gcy0p fdghr9 f1e60jzv"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="combobox"
            tabIndex={0}
            type="button"
            value=""
          >
            <span
              className="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
            >
              <svg
                aria-hidden={true}
                className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                fill="currentColor"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Clear selection"
            className="fui-Dropdown__clearButton r1ekmruf ___1ijk9xi_1ynmboo f1ewtqcl fxkbij4 fjseox fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
      >
        <label
          className="fui-Label fui-Field__label ___1r7nw7g_1a9hq9n fk6fouc f19n0e5 fkhj508 f1i3iumi fclwglc fywfov9 fyacil5"
          htmlFor="field-rk__control"
          id="field-rk__label"
        />
        <div
          className="fui-Dropdown form-control ___1t74ezd_q04bao0 f1aa9q02 f16jpd5f f1jar5jt fyu767a f1ewtqcl ftuwxu6 f1exfvgq f10pi13n f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 f132nw8t f1htdosj fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh fvcxoqz f1ub3y4t flmw63s f1m52nbi fvs00aa f1assf6x fqhmt4z f4ruux4"
        >
          <button
            aria-describedby="root__error root__description root__help"
            aria-expanded={false}
            aria-labelledby="field-rk__label"
            autoFocus={false}
            className="fui-Dropdown__button ___10ah4o2_6igl400 f122n59 f1c21dwh fre7gi1 f1358rze fqdk4by f1rvrf73 f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f1sbtcvk f11gcy0p fdghr9 f1e60jzv"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="combobox"
            tabIndex={0}
            type="button"
            value=""
          >
            <span
              className="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
            >
              <svg
                aria-hidden={true}
                className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                fill="currentColor"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice enumDisabled 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
      >
        <label
          className="fui-Label fui-Field__label ___1r7nw7g_1a9hq9n fk6fouc f19n0e5 fkhj508 f1i3iumi fclwglc fywfov9 fyacil5"
          htmlFor="field-r11__control"
          id="field-r11__label"
        />
        <div
          className="fui-Dropdown form-control ___1t74ezd_q04bao0 f1aa9q02 f16jpd5f f1jar5jt fyu767a f1ewtqcl ftuwxu6 f1exfvgq f10pi13n f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 f132nw8t f1htdosj fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh fvcxoqz f1ub3y4t flmw63s f1m52nbi fvs00aa f1assf6x fqhmt4z f4ruux4"
        >
          <button
            aria-describedby="root__error root__description root__help"
            aria-expanded={false}
            aria-labelledby="field-r11__label"
            autoFocus={false}
            className="fui-Dropdown__button ___10ah4o2_6igl400 f122n59 f1c21dwh fre7gi1 f1358rze fqdk4by f1rvrf73 f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f1sbtcvk f11gcy0p fdghr9 f1e60jzv"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="combobox"
            tabIndex={0}
            type="button"
            value=""
          >
            <span
              className="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
            >
              <svg
                aria-hidden={true}
                className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                fill="currentColor"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice enumDisabled using checkboxes 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___1yevxz2_yljzsa0 fk6fouc f19n0e5 fkhj508 f1i3iumi"
        htmlFor="root"
      />
      <div
        className="fui-Flex ___1ccp5kb_1s932w9 f22iagw f1vx9l62"
      >
        <span
          className="fui-Checkbox r10zo65y ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
            disabled={false}
            id="root-0"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <div
            aria-hidden={true}
            className="fui-Checkbox__indicator rl7ci6d"
          />
          <label
            className="fui-Label fui-Checkbox__label ___noxlvg0_1xjoun4 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-0"
          >
            foo
          </label>
        </span>
        <span
          className="fui-Checkbox r10zo65y ___8i7d4u0_1q3ajh0 f158kwzp f1s2aq7o f1w7mfl5 fcoafq6 f1dcs8yz fxb3eh3"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
            disabled={true}
            id="root-1"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <div
            aria-hidden={true}
            className="fui-Checkbox__indicator rl7ci6d"
          />
          <label
            className="fui-Label fui-Checkbox__label ___186rvlj_12dx2by fk6fouc f1ym3bx4 f1dcs8yz fkhj508 f1i3iumi f7nlbp4 fpo1scq f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-1"
          >
            bar
          </label>
        </span>
        <span
          className="fui-Checkbox r10zo65y ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
            disabled={false}
            id="root-2"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <div
            aria-hidden={true}
            className="fui-Checkbox__indicator rl7ci6d"
          />
          <label
            className="fui-Label fui-Checkbox__label ___noxlvg0_1xjoun4 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-2"
          >
            fuzz
          </label>
        </span>
        <span
          className="fui-Checkbox r10zo65y ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
            disabled={false}
            id="root-3"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <div
            aria-hidden={true}
            className="fui-Checkbox__indicator rl7ci6d"
          />
          <label
            className="fui-Label fui-Checkbox__label ___noxlvg0_1xjoun4 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-3"
          >
            qux
          </label>
        </span>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice formData 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
      >
        <label
          className="fui-Label fui-Field__label ___1r7nw7g_1a9hq9n fk6fouc f19n0e5 fkhj508 f1i3iumi fclwglc fywfov9 fyacil5"
          htmlFor="field-r1c__control"
          id="field-r1c__label"
        />
        <div
          className="fui-Dropdown form-control ___1t74ezd_q04bao0 f1aa9q02 f16jpd5f f1jar5jt fyu767a f1ewtqcl ftuwxu6 f1exfvgq f10pi13n f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 f132nw8t f1htdosj fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh fvcxoqz f1ub3y4t flmw63s f1m52nbi fvs00aa f1assf6x fqhmt4z f4ruux4"
        >
          <button
            aria-describedby="root__error root__description root__help"
            aria-expanded={false}
            aria-labelledby="field-r1c__label"
            autoFocus={false}
            className="fui-Dropdown__button ___10ah4o2_6igl400 f122n59 f1c21dwh fre7gi1 f1358rze fqdk4by f1rvrf73 f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f1sbtcvk f11gcy0p fdghr9 f1e60jzv"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="combobox"
            tabIndex={0}
            type="button"
            value="foo, bar"
          >
            foo, bar
            <span
              className="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
            >
              <svg
                aria-hidden={true}
                className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                fill="currentColor"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice with labels 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
      >
        <label
          className="fui-Label fui-Field__label ___1r7nw7g_1a9hq9n fk6fouc f19n0e5 fkhj508 f1i3iumi fclwglc fywfov9 fyacil5"
          htmlFor="field-rn__control"
          id="field-rn__label"
        />
        <div
          className="fui-Dropdown form-control ___1t74ezd_q04bao0 f1aa9q02 f16jpd5f f1jar5jt fyu767a f1ewtqcl ftuwxu6 f1exfvgq f10pi13n f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 f132nw8t f1htdosj fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh fvcxoqz f1ub3y4t flmw63s f1m52nbi fvs00aa f1assf6x fqhmt4z f4ruux4"
        >
          <button
            aria-describedby="root__error root__description root__help"
            aria-expanded={false}
            aria-labelledby="field-rn__label"
            autoFocus={false}
            className="fui-Dropdown__button ___10ah4o2_6igl400 f122n59 f1c21dwh fre7gi1 f1358rze fqdk4by f1rvrf73 f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f1sbtcvk f11gcy0p fdghr9 f1e60jzv"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="combobox"
            tabIndex={0}
            type="button"
            value=""
          >
            <span
              className="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
            >
              <svg
                aria-hidden={true}
                className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                fill="currentColor"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field single choice enumDisabled 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
      >
        <label
          className="fui-Label fui-Field__label ___1r7nw7g_1a9hq9n fk6fouc f19n0e5 fkhj508 f1i3iumi fclwglc fywfov9 fyacil5"
          htmlFor="field-rq__control"
          id="field-rq__label"
        />
        <div
          className="fui-Dropdown form-control ___1t74ezd_q04bao0 f1aa9q02 f16jpd5f f1jar5jt fyu767a f1ewtqcl ftuwxu6 f1exfvgq f10pi13n f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 f132nw8t f1htdosj fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh fvcxoqz f1ub3y4t flmw63s f1m52nbi fvs00aa f1assf6x fqhmt4z f4ruux4"
        >
          <button
            aria-describedby="root__error root__description root__help"
            aria-expanded={false}
            aria-labelledby="field-rq__label"
            autoFocus={false}
            className="fui-Dropdown__button ___10ah4o2_6igl400 f122n59 f1c21dwh fre7gi1 f1358rze fqdk4by f1rvrf73 f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f1sbtcvk f11gcy0p fdghr9 f1e60jzv"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="combobox"
            tabIndex={0}
            type="button"
            value=""
          >
            <span
              className="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
            >
              <svg
                aria-hidden={true}
                className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                fill="currentColor"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Clear selection"
            className="fui-Dropdown__clearButton r1ekmruf ___1ijk9xi_1ynmboo f1ewtqcl fxkbij4 fjseox fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field single choice enumDisabled using radio widget 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___1yevxz2_yljzsa0 fk6fouc f19n0e5 fkhj508 f1i3iumi"
        htmlFor="root"
      />
      <div
        aria-describedby="root__error root__description root__help"
        className="fui-RadioGroup ___1tjgnp0_1mgmpxf f22iagw f6jr5hl f1vx9l62"
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        role="radiogroup"
      >
        <span
          className="fui-Radio rm0dkue"
        >
          <input
            aria-describedby="root__error root__description root__help"
            className="fui-Radio__input rg1upok ___183j3wl_1dim0pv f9ma1gx"
            disabled={false}
            id="root-0"
            name="root"
            onChange={[Function]}
            type="radio"
            value="0"
          />
          <div
            aria-hidden={true}
            className="fui-Radio__indicator rwtekvw"
          />
          <label
            className="fui-Label fui-Radio__label ___1o91fp6_qunpvi0 fk6fouc f19n0e5 fkhj508 f1i3iumi f7nlbp4 f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-0"
          >
            foo
          </label>
        </span>
        <span
          className="fui-Radio rm0dkue"
        >
          <input
            aria-describedby="root__error root__description root__help"
            className="fui-Radio__input rg1upok ___183j3wl_1dim0pv f9ma1gx"
            disabled={true}
            id="root-1"
            name="root"
            onChange={[Function]}
            type="radio"
            value="1"
          />
          <div
            aria-hidden={true}
            className="fui-Radio__indicator rwtekvw"
          />
          <label
            className="fui-Label fui-Radio__label ___15z4dte_1wo7efl fk6fouc f1s2aq7o f1dcs8yz fkhj508 f1i3iumi f7nlbp4 f1kwiid1 f1vdfbxk f5b47ha fruq291 fjzwpt6 fh6j2fo"
            htmlFor="root-1"
          >
            bar
          </label>
        </span>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field single choice formData 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
      >
        <label
          className="fui-Label fui-Field__label ___1r7nw7g_1a9hq9n fk6fouc f19n0e5 fkhj508 f1i3iumi fclwglc fywfov9 fyacil5"
          htmlFor="field-r19__control"
          id="field-r19__label"
        />
        <div
          className="fui-Dropdown form-control ___1t74ezd_q04bao0 f1aa9q02 f16jpd5f f1jar5jt fyu767a f1ewtqcl ftuwxu6 f1exfvgq f10pi13n f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 f132nw8t f1htdosj fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh fvcxoqz f1ub3y4t flmw63s f1m52nbi fvs00aa f1assf6x fqhmt4z f4ruux4"
        >
          <button
            aria-describedby="root__error root__description root__help"
            aria-expanded={false}
            aria-labelledby="field-r19__label"
            autoFocus={false}
            className="fui-Dropdown__button ___10ah4o2_6igl400 f122n59 f1c21dwh fre7gi1 f1358rze fqdk4by f1rvrf73 f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f1sbtcvk f11gcy0p fdghr9 f1e60jzv"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="combobox"
            tabIndex={0}
            type="button"
            value="bar"
          >
            bar
            <span
              className="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
            >
              <svg
                aria-hidden={true}
                className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                fill="currentColor"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Clear selection"
            className="fui-Dropdown__clearButton r1ekmruf ___1ijk9xi_1ynmboo f1ewtqcl fxkbij4 fjseox fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields slider field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-integer"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___1yevxz2_yljzsa0 fk6fouc f19n0e5 fkhj508 f1i3iumi"
        htmlFor="root"
      />
      <div
        className="fui-Slider ___1nhhlq1_dfqmgh0 f10pi13n fwk3njj f1sdsnyy f122n59 f1oiokrs ftqa4ok f2hkw1w f1b1k54r f4ne723 fh7aioi fqqcjud f1k55ka9 fgclinu fycbxed f16pcs8n ffht0p2 f1p0ul1q f1c901ms f1alokd7 f78i1la f1kvsw7t f8k7e5g f1bw8brt f1pmxfrl fszkfcr f57dp0y f1ap5ily f11dm2qb f136rfnd fdsq1qd f1khssms fq4eyks f1ya6x16 f1e2iu44 ftuszwa f1pffoy2 f1bmyog6 fs6b7xr f15fv2gd f1a78h9h fuok0yf f1nxs5xn fyvtabn fgfd48t f4t5rw1 f4l8x3l f671q34 fvfzmw5 faw1t00 fxdgx5 fii04fa f36hzz8 f1volkfw f1xddb6 fcdikl fhpzgm6 f1q6pm3h"
        style={
          {
            "--fui-Slider--direction": "90deg",
            "--fui-Slider--progress": "56.896551724137936%",
            "--fui-Slider--steps-percent": "",
          }
        }
      >
        <input
          aria-describedby="root__error root__description root__help"
          className="fui-Slider__input ___8p3dzw0_2fzfsa0 f1k6fduh fk73vx1 f16hsg94 f1nzqi2z fwpfdsa fuur7zz f1g0x7ka fhxju0i f1qch9an f1cnd47f f1hu3pq6 f11qmguv f19f4twv f1tyq0we f1yfdkfd fly5x3f"
          disabled={false}
          id="root"
          max={100}
          min={42}
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="range"
          value={75}
        />
        <div
          className="fui-Slider__rail ___1a5brpz_17vwgb3 fnivh3a fc7yr5o f1el4m67 f8yange f1aehjj5 faunodf f88nxoq fd46tj4 f1e2fz10 f10pi13n fdgv6k0 fizngqt fpvhumw f1yog68k f13sgyd8 fzhtfnv f1j7ml58 fx36ao7 fux3rle fly5x3f f1cy86ho f1heqfse fkh49vu f16tdq4e"
        />
        <div
          className="fui-Slider__thumb ___14wdpg0_ohb8140 faunodf f88nxoq fd46tj4 f1e2fz10 f1euv43f f174ca62 f1yfdkfd f1aehjj5 f1s6fcnf fdgv6k0 f8fbkgy f1nfllo7 f1djnp8u f1s8kh49 fof7hq0 foksa45 f1j7ml58 f14u7mkt f5zrw40 fto0uou f1ks5ppg feh19e8 f3j3guj fo75joz f1yag6sl fyl8oag fzhtfnv f1rponpz f1rvw2z1 f1muowhs fjj0g3m f163fonl f1yq6w5o f11yjt3y f1jpmc5p f10tv6oz f16xp3sf fwrmqbx f1seuxxq f13gfj74 f1fj3zth"
        />
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div>
        <label
          className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
          htmlFor="root"
        />
        <span
          className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            type="file"
            value=""
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="email"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="url"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field with placeholder 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="placeholder"
          type="text"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields textarea field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Textarea ___yvnocc0_ob5ctq0 ftuwxu6 f1ewtqcl f10pi13n f1g0x7ka fhxju0i f1ean75l f1cnd47f f1hu3pq6 f11qmguv f19f4twv f1tyq0we f1aa9q02 f16jpd5f f1jar5jt fyu767a fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc fj2g8qd f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 f1vnc8sk f3e99gv fhljsf7 f7ic3uo f1omjgsz fn6xmsl f1snvl17 f1sn8sm0 f1wovo5e fm0h710 f716mnf fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi fk7lb2a f1knhbbd f15pjvi3 f17itt0b f6ginmj f1grcyuh fk1xjsr fgzu20w fvs00aa f1assf6x f1z0osm6 f4ruux4 fu7v4fk f1fnaxjy f7hodha fwory1w f8jkv7v f1f3jaeo f19usxel fh8au0q f12oevn0 fvdgz8d f1so894s f1cq0lt5"
      >
        <textarea
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Textarea__textarea ___vxzxgk0_17t7cfl f1ern45e f1n71otn f1h8hb77 f1deefiw f1hu3pq6 f11qmguv f19f4twv f1tyq0we f3rmtva f1ewtqcl f19n0e5 fqerorx fk6fouc f1l02sjl fwyc1cq f13ta7ih f1vw9udw fbb3kq8 f1s6fcnf fvmd9f fp2oml8 f135dnwl f1tdddsa f1e60jzv f1if7ixc fkhj508 figsok6 f1i3iumi f1o1s39h"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          rows={5}
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields title field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="___12hmf4e_0000000 f2zxqi febqm8h"
        id="root__title"
      >
        <h5
          className="fui-Text ___piw0oj0_6kpfnf0 fk6fouc f1x0m3f5 fb86gi6 figsok6 fpgzoln f1w7gpdv f6juhto f1mtd64y f1y7q3j9 f2jf649"
        >
          Titre 1
        </h5>
        <div
          aria-orientation="horizontal"
          className="fui-Divider ___14drqcq_2rxt2r0 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f13rof3u f8rth92 f6czdpx f1iyka9k fzynn9s fekrn8e f1kyqvp9 fesgyo"
          role="separator"
        />
      </div>
      <div
        className="fui-Flex ___2axmsj0_qpg1ts0 f22iagw f1vx9l62 fly5x3f f1l02sjl f16r77es"
      >
        <div
          className="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
          style={
            {
              "marginBottom": "10px",
            }
          }
        >
          <div
            className="form-group field field-string"
          >
            <div
              className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
            >
              <label
                className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                htmlFor="root_title"
              >
                Titre 2
              </label>
              <span
                className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
              >
                <input
                  aria-describedby="root_title__error root_title__description root_title__help"
                  autoFocus={false}
                  className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
                  disabled={false}
                  id="root_title"
                  name="root_title"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  required={false}
                  type="text"
                  value=""
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-undefined"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <div
        className="unsupported-field"
      >
        <p>
          <span>
            Unsupported field schema for field 
            <code>
              root
            </code>
            : 
            <em>
              Unknown field type undefined
            </em>
            .
          </span>
        </p>
        <pre>
          {}
        </pre>
      </div>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields up/down field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields using custom tagName 1`] = `
<div
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
    >
      <label
        className="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
        htmlFor="root"
      />
      <span
        className="fui-Input r1jtohuq ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
      >
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="fui-Input__input rvp2gzh ___cqaz2i0_9xw1o20 fly5x3f"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    className="___fko12g0_0000000 f1wswflg"
  >
    <button
      className="fui-Button r1alrhcs ___1akj6hk_ih97uj0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1rirnrt f1uu00uk fkvaka8 f1ux7til f9a0qzu f1lkg8j3 fkc42ay fq7113v ff1wgvm fiob0tu f1j6scgf f1x4h75k f4xjyn1 fbgcvur f1ks1yx8 f1o6qegi fcnxywj fmxjhhp f9ddjv3 f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv f12k37oa fr96u23"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;
